<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_enter_ph_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/activity_login_sign_up_edt_ph_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/activity_log_in_sign_up_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/common_signin_button_text"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_enter_otp_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_main_tv_count_down_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/activity_main_tv_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/resend_otp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="italic"
                android:visibility="gone" />

            <EditText
                android:id="@+id/activity_login_sign_up_edt_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/enter_otp"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/activity_log_in_sign_up_btn_verify_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/verify"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/activity_main_tv_success_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/phone_number_successfully_verified_thankyou"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:visibility="gone" />


</LinearLayout>
